@@ -1,5 +1,6 @@
 HEAD
 	+ Safer regexes in ebox-update-packages and ebox-remove-packages
+	+ Do not ignore kernel packages in system updates
 2.0.8
 	+ Open and close write fifos only one time and autoflush them
 	+ Avoid sending duplicated lines to the fifos
